// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/rum Should enable the debug mode if certain query param exists 1`] = `
Object {
  "scripts": Object {
    "bundle": Array [
      "pathPrefix/ru/rum/implementation.min.js?antiCache",
      "pathPrefix/ru/rum/onload.min.js?antiCache",
      "pathPrefix/ru/rum/blockstat.js?antiCache",
    ],
    "inline": Array [
      "interface",
      "send",
      "longtask",
    ],
  },
  "settings": Object {
    "beacon": true,
    "clck": "https://yandex.ru/clck/click",
    "crossOrigin": "",
    "reqid": "foo",
    "slots": Array [],
  },
  "vars": Object {
    "143": "28.3297.3631.123",
    "287": "213",
  },
}
`;

exports[`middlewares/rum Should provide RUM-counter settings 1`] = `
Object {
  "scripts": Object {
    "bundle": Array [
      "pathPrefix/ru/rum/implementation.min.js?antiCache",
      "pathPrefix/ru/rum/onload.min.js?antiCache",
    ],
    "inline": Array [
      "interface",
      "send",
      "longtask",
    ],
  },
  "settings": Object {
    "beacon": true,
    "clck": "https://yandex.ru/clck/click",
    "crossOrigin": "",
    "reqid": "foo",
    "slots": Array [],
  },
  "vars": Object {
    "143": "28.3297.3631.123",
    "287": "213",
  },
}
`;

exports[`middlewares/rum/rumErrorLogging Should enable debug mode if there is a specific query param 1`] = `
Object {
  "scripts": Array [
    "interface",
    "implementation",
    "filters",
  ],
  "settings": Object {
    "debug": true,
    "env": "123",
    "platform": "desktop",
    "project": "crt",
  },
}
`;

exports[`middlewares/rum/rumErrorLogging Should provide settings 1`] = `
Object {
  "scripts": Array [
    "interface",
    "implementation",
    "filters",
  ],
  "settings": Object {
    "debug": false,
    "env": "123",
    "platform": "desktop",
    "project": "crt",
  },
}
`;
